--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -6,6 +6,11 @@ html {
   font-family: 'Noto Sans KR', sans-serif;
 }
 
+b{
+  color: $black;
+  font-weight: 600;
+}
+
 u {
   text-decoration: none;
   padding-bottom: 0px;
