--- a/scss/_patent_search.scss
+++ b/scss/_patent_search.scss
@@ -2,17 +2,14 @@
 	word-break: keep-all;
 	color: $dark;
 
-	b {
-		font-weight: bold;
-	}
-
 	h2 {
+		font-weight: bold;;
 		font-size: 2rem;
 	}
 
 	p {
-		font-size: 1.1rem;
 		font-weight: 500;
+		font-size: 1.1rem;
 	}
 
 	@include media-breakpoint-down(md) {
