--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -6,7 +6,7 @@ html {
   font-family: 'Noto Sans KR', sans-serif;
 }
 
-b{
+b {
   color: $black;
   font-weight: 600;
 }
@@ -17,14 +17,14 @@ u {
   border-bottom: 3px solid $dark;
 }
 
-ur{
+ur {
   text-decoration: none;
   padding-bottom: 0px;
   border-bottom: 3px solid rgb(255, 0, 0);
   font-weight: bold;
 }
 
-ug{
+ug {
   text-decoration: none;
   padding-bottom: 0px;
   border-bottom: 3px dotted rgb(76, 197, 28);
@@ -220,4 +220,31 @@ hr.light {
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   text-align: center;
+}
+
+.img-container img {
+  width: 125px;
+  height: auto;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  cursor: pointer;
+  display: block;
+  -webkit-tap-highlight-color: transparent;
+  transition: .3s;
+  -webkit-transition: .3s;
+  -moz-transition: .3s;
+
+}
+
+.img-container img:hover {
+  transform: scale(0.97);
+  -webkit-transform: scale(0.97);
+  -moz-transform: scale(0.97);
+  -o-transform: scale(0.97);
+  opacity: 0.75;
+  -webkit-opacity: 0.75;
+  -moz-opacity: 0.75;
+  transition: .3s;
+  -webkit-transition: .3s;
+  -moz-transition: .3s;
 }
