--- a/css/popup-lightbox.css
+++ b/css/popup-lightbox.css
@@ -23,7 +23,7 @@
 }
 
 .img-caption {
-	background: rgba(0, 0, 0, 0.3);
+	background: rgba(0, 0, 0, 0.75);
 	padding: 10px;
 	position: absolute;
 	bottom: 0;
@@ -41,11 +41,13 @@
 	right: 10px;
 	width: 32px;
 	height: 32px;
-	border: 1px solid #fff;
+	border: 1px solid rgb(73, 73, 73);
 	background: rgba(255, 255, 255, 0.5);
 	border-radius: 50%;
 	text-align: center;
-	font-size: 18pt;
+	font-size: 15pt;
+	color: rgb(73, 73, 73);
+	font-family: fantasy;
 	z-index: 101;
 	cursor: pointer;
 }
