--- a/css/creative.css
+++ b/css/creative.css
@@ -10791,7 +10791,7 @@ hr.light {
 .img-container img {
   width: 125px;
   height: auto;
-  border: 1px solid #ccc;
+  border: 1px solid #7a7a7a;
   border-radius: 5px;
   cursor: pointer;
   display: block;
@@ -10799,16 +10799,14 @@ hr.light {
   transition: .3s;
   -webkit-transition: .3s;
   -moz-transition: .3s;
+  margin-bottom: 0.3rem;
 }
 
 .img-container img:hover {
-  transform: scale(0.97);
-  -webkit-transform: scale(0.97);
-  -moz-transform: scale(0.97);
-  -o-transform: scale(0.97);
-  opacity: 0.75;
-  -webkit-opacity: 0.75;
-  -moz-opacity: 0.75;
+  transform: scale(0.9);
+  -webkit-transform: scale(0.9);
+  -moz-transform: scale(0.9);
+  -o-transform: scale(0.9);
   transition: .3s;
   -webkit-transition: .3s;
   -moz-transition: .3s;
