--- a/css/popup-lightbox.css
+++ b/css/popup-lightbox.css
@@ -42,7 +42,7 @@
 	width: 32px;
 	height: 32px;
 	border: 1px solid rgb(73, 73, 73);
-	background: rgba(255, 255, 255, 0.5);
+	background: rgba(255, 255, 255);
 	border-radius: 50%;
 	text-align: center;
 	font-size: 15pt;
@@ -53,7 +53,8 @@
 }
 
 .lightbox .btn-close:hover {
-	background: #fff;
+	background: rgb(73, 73, 73);
+	color: #fff;
 }
 
 .lightbox .lightbox-status {
