--- a/css/popup-lightbox.css
+++ b/css/popup-lightbox.css
@@ -61,8 +61,11 @@
 	position: absolute;
 	top: 20px;
 	left: 20px;
+	border: 1px solid rgb(73, 73, 73);
+	background: rgba(255, 255, 255);
 	color: rgb(73, 73, 73);
 	font-size: 14px;
+	padding: 5px;
 	z-index: 101;
 }
 
