--- a/scss/_manual.scss
+++ b/scss/_manual.scss
@@ -19,6 +19,16 @@
 		margin-bottom: 0.3rem;
 	}
 
+	.screen_border {
+		border: 1px solid rgb(82, 81, 81);
+		border-radius: 15px;
+		padding: 20px;
+		box-shadow: 5px 5px 5px rgb(189, 189, 189);
+		margin-bottom: 7px;
+	}
+
+
+
 	@include media-breakpoint-down(md) {
 		h2 {
 			font-size: 1.75rem;
@@ -33,6 +43,13 @@
 
 		p {
 			font-size: 1rem;
+		}
+
+		.screen_border {
+			border: none;
+			box-shadow: none;
+			padding: 0px;
+			margin-bottom: 0px;
 		}
 	}
 }
